2007-10-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/holidays.xml: removed SDate: use offset instead

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
    * src/DbManager.py: issue #1325, localize last date of change

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditPlace.py: fixed name of street MonitoredEntry
	* src/Editors/_EditLocation.py: fixed name of street MonitoredEntry
	MonitoredEntry field for street wrongly named as city. Caused strange
	occasional drag and drop bug. issue #1304

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayTabs/_EnbeddedList.py: Fixed crash when doing a drag and
	drop with an object that was deleted from a list. issue # 1326

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
    * src/Relationship.py: finish up step and inlaw, expand test routine
    Still to add: half-brother recognition, family collapse

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/DisplayModels/_PeopleModel.py: removed a performance change added
	in revision 8734. This was causing issues #1322 & #1324
	Also replaced tab indentation with spaces

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: fix typo

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: begin of extension to step and in-law
	NOT finished.

2007-10-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: change api get_singular, add docu string
	* src/plugins/all_relations.py: call get_singular changed.

2007-10-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: display date on text report in locale;
	changed a font default; removed string date class: use offset instead

2007-10-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: merge in changes of branch22
	* src/DisplayState.py: method to set rel class