@@ -1,3 +1,7 @@
+2007-10-29 Gary Burton <gary.burton@zen.co.uk>
+	* src/gen/lib/person.py: reset birth and death indexes after deleting
+    an event. Fixes #1327
+
 2007-10-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/holidays.xml: removed SDate: use offset instead
 
